# Teste-wasm-webworkers

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt-ok  README.md  app_tcc_wasm.js  app_tcc_wasm.wasm  app_wasm.js  app_wasm.wasm  build.ninja  cmake_install.cmake  rules.ninja
src/: app.cpp  fib-threads.c  fib-threads.js  fib-threads.js.mem  fib-threads.wasm
www/: app_wasm.js  app_wasm.js-old  app_wasm.wasm  app_wasm.wasm-old  fib-threads.c  fib-threads.js.mem  fib-threads.wasm  teste-wasmthreads.html  teste.html
